added enpoint to update genre information
